--- a/src/index.html
+++ b/src/index.html
@@ -81,19 +81,25 @@
           <div class="format-options">
             <div class="format-option">
               <label for="iso">
-                <input type="radio" id="iso" name="dateFormat" value="iso" checked>
+                <input
+                  type="radio"
+                  id="iso"
+                  name="dateFormat"
+                  value="iso"
+                  checked
+                />
                 <span>yyyy/mm/dd</span>
               </label>
             </div>
             <div class="format-option">
               <label for="us">
-                <input type="radio" id="us" name="dateFormat" value="us">
+                <input type="radio" id="us" name="dateFormat" value="us" />
                 <span>mm/dd/yyyy</span>
               </label>
             </div>
             <div class="format-option">
               <label for="eu">
-                <input type="radio" id="eu" name="dateFormat" value="eu">
+                <input type="radio" id="eu" name="dateFormat" value="eu" />
                 <span>dd/mm/yyyy</span>
               </label>
             </div>
@@ -108,10 +114,10 @@
               max="1"
               step="0.01"
               value="0.5"
-            >
+            />
           </div>
           <div class="toggle-option">
-            <input type="checkbox" id="showDecimals" name="showDecimals">
+            <input type="checkbox" id="showDecimals" name="showDecimals" />
             <label for="showDecimals">Show decimal numbers</label>
           </div>
           <div class="about">
