--- a/src/index.html
+++ b/src/index.html
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/WebApplication">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKCEY9D2YD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XKCEY9D2YD');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cistercian Date | Medieval Number System Clock</title>
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Cistercian Date | Medieval Number System Clock" />
+    <meta
+      name="title"
+      content="Cistercian Date | Medieval Number System Clock"
+    />
     <meta
       name="description"
       content="Experience time in a unique way with Cistercian numerals - a number notation system developed by 13th century monks. Watch as the current date and time are displayed using these elegant historical symbols."
     />
     <meta name="author" content="Jacob DeHart" />
-    <meta name="keywords" content="cistercian numerals, medieval numbers, time display, clock, cistercian date, cistercian clock, medieval mathematics, historical numerals" />
+    <meta
+      name="keywords"
+      content="cistercian numerals, medieval numbers, time display, clock, cistercian date, cistercian clock, medieval mathematics, historical numerals"
+    />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://cistercian.date" />
     <meta property="og:site_name" content="Cistercian Date" />
-    <meta property="og:title" content="Cistercian Date | Medieval Number System Clock" />
+    <meta
+      property="og:title"
+      content="Cistercian Date | Medieval Number System Clock"
+    />
     <meta
       property="og:description"
       content="Experience time in a unique way with Cistercian numerals - a number notation system developed by 13th century monks. Watch as the current date and time are displayed using these elegant historical symbols."
     />
-    <meta property="og:image" content="https://cistercian.date/imgs/cistercian-preview.png" />
+    <meta
+      property="og:image"
+      content="https://cistercian.date/imgs/cistercian-preview.png"
+    />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="495" />
-    <meta property="og:image:alt" content="Cistercian Date display showing current time" />
+    <meta
+      property="og:image:alt"
+      content="Cistercian Date display showing current time"
+    />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@cisterciandate" />
     <meta name="twitter:creator" content="@jacobdehart" />
-    <meta name="twitter:title" content="Cistercian Date | Medieval Number System Clock" />
+    <meta
+      name="twitter:title"
+      content="Cistercian Date | Medieval Number System Clock"
+    />
     <meta
       name="twitter:description"
       content="Experience time in a unique way with Cistercian numerals - a number notation system developed by 13th century monks. Watch as the current date and time are displayed using these elegant historical symbols."
     />
-    <meta name="twitter:image" content="https://cistercian.date/imgs/cistercian-preview.png" />
+    <meta
+      name="twitter:image"
+      content="https://cistercian.date/imgs/cistercian-preview.png"
+    />
 
     <!-- Favicon and Theme -->
     <link rel="canonical" href="https://cistercian.date" />
@@ -46,7 +76,10 @@
     <link rel="icon" type="image/png" href="/imgs/icon.png" />
     <meta name="theme-color" content="#FFF" />
     <meta name="msapplication-TileColor" content="#FFF" />
-    <meta name="msapplication-TileImage" content="/imgs/cistercian-preview.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="/imgs/cistercian-preview.png"
+    />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -62,26 +95,26 @@
 
     <!-- Schema.org markup -->
     <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "WebApplication",
-      "name": "Cistercian Date",
-      "url": "https://cistercian.date",
-      "description": "A real-time clock using medieval Cistercian numerals to display the current date and time",
-      "applicationCategory": "Clock",
-      "author": {
-        "@type": "Person",
-        "name": "Jacob DeHart",
-        "url": "https://www.jacobdehart.com"
-      },
-      "browserRequirements": "Requires JavaScript",
-      "softwareVersion": "1.0",
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "USD"
+      {
+        "@context": "http://schema.org",
+        "@type": "WebApplication",
+        "name": "Cistercian Date",
+        "url": "https://cistercian.date",
+        "description": "A real-time clock using medieval Cistercian numerals to display the current date and time",
+        "applicationCategory": "Clock",
+        "author": {
+          "@type": "Person",
+          "name": "Jacob DeHart",
+          "url": "https://www.jacobdehart.com"
+        },
+        "browserRequirements": "Requires JavaScript",
+        "softwareVersion": "1.0",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        }
       }
-    }
     </script>
   </head>
   <body>
@@ -165,11 +198,37 @@
       <section>
         <h1>Cistercian Date</h1>
         <p>
-          Cistercian Date displays the current time using a medieval number
-          system created by Cistercian monks. Each vertical glyph represents a
-          complete number, showing the date and time in an elegant,
-          space-efficient format that bridges a thousand years of human
-          ingenuity.
+          A couple years ago, I decided to binge-watch a bunch of Numberphile
+          videos. Numberphile is a YouTube channel that covers a wide range of
+          topics in mathematics, and often I would find myself thinking of a
+          creative way to visualize the topics they covered.
+        </p>
+        <p>
+          One of those videos that I stumbled across was about
+          <a href="#wikipedia-cistercian-numerals">Cistercian numerals</a>. I
+          was fascinated by the idea of using a medieval number system to that
+          could compress large numbers into a single symbol. According to
+          <a href="#numberphile-video">the video</a>, the
+          <a href="#wikipedia-cistercian-numerals">Cistercian Order</a> used
+          this system to record large numbers in their manuscripts, many times
+          using them to represent dates.
+        </p>
+        <p>
+          I thought this would be a great system to experiment with, and I went
+          ahead and registred cistercian.date as my own domain.
+        </p>
+        <p>
+          As with many projects, I bought the domain with the intention of
+          immediately working on it, and didn't touch it for almost two years.
+          With my recent personal mass migration of domains names away from
+          Squarespace (Thanks Google), I was reminded about the idea and spent a
+          few lunch breaks hacking away at this site.
+        </p>
+        <p>
+          I'm not the first person to have come up with this idea, but I hope
+          you enjoy my implementation of cistercian numerals using Javascript.
+          The entire source code for this site is available on
+          <a href="https://github.com/jacobd/cistercian.date">GitHub</a>.
         </p>
       </section>
 
@@ -226,39 +285,6 @@
           <!-- Grid cells will be added by JavaScript -->
         </div>
       </section>
-      <section class="references">
-        <h2>References & Further Reading</h2>
-        <p>
-          To learn more about Cistercian numerals and their fascinating history,
-          check out these excellent resources:
-        </p>
-        <ul>
-          <li>
-            <a href="https://en.wikipedia.org/wiki/Cistercian_numerals">
-              Wikipedia: Cistercian Numerals
-            </a>
-            - A comprehensive overview of the number system's history and usage
-          </li>
-          <li>
-            <a href="https://www.ncregister.com/blog/cistercian-numerals-secret-code">
-              National Catholic Register: The Secret Catholic Code of Cistercian Numerals
-            </a>
-            - An exploration of the system's religious and historical context
-          </li>
-          <li>
-            <a href="https://kottke.org/23/01/cistercian-numerals">
-              Kottke.org: Cistercian Numerals
-            </a>
-            - A modern perspective on this medieval innovation
-          </li>
-          <li>
-            <a href="https://www.youtube.com/watch?v=9p55Qgt7Ciw">
-              Numberphile: Cistercian Numbers
-            </a>
-            - An engaging video explanation of how the system works
-          </li>
-        </ul>
-      </section>
       <section id="stop-watch">
         <h2>Stopwatch</h2>
 
@@ -295,6 +321,38 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="references">
+        <h2>References & Further Reading</h2>
+        <ul>
+          <li id="wikipedia-cistercian-numerals">
+            <a href="https://en.wikipedia.org/wiki/Cistercian_numerals">
+              Wikipedia: Cistercian Numerals
+            </a>
+            - A comprehensive overview of the number system's history and usage
+          </li>
+          <li id="numberphile-video">
+            <a href="https://www.youtube.com/watch?v=9p55Qgt7Ciw">
+              Numberphile: Cistercian Numbers
+            </a>
+            - An engaging video explanation of how the system works
+          </li>
+          <li id="national-catholic-register">
+            <a
+              href="https://www.ncregister.com/blog/cistercian-numerals-secret-code"
+            >
+              National Catholic Register: The Secret Catholic Code of Cistercian
+              Numerals
+            </a>
+            - An exploration of the system's religious and historical context
+          </li>
+          <li>
+            <a href="https://kottke.org/23/01/cistercian-numerals">
+              Kottke.org: Cistercian Numerals
+            </a>
+            - A modern perspective on this medieval innovation
+          </li>
+        </ul>
       </section>
     </div>
     <footer class="site-footer">
