--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en" itemscope itemtype="http://schema.org/WebApplication">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKCEY9D2YD"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XKCEY9D2YD"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
 
       gtag('config', 'G-XKCEY9D2YD');
@@ -173,7 +178,7 @@
             />
           </div>
           <div class="slider-option">
-            <label for="aspectSlider">Aspect ratio</label>
+            <label for="aspectSlider">Height</label>
             <input
               type="range"
               id="aspectSlider"
@@ -233,24 +238,6 @@
       </section>
 
       <section>
-        <h2>The Cistercian Order</h2>
-        <p>
-          The Cistercian Order was founded in 1098 in Cîteaux, France, as a
-          reform movement within the Benedictine monastic tradition. These
-          monks, known for their architectural innovations and agricultural
-          expertise, sought to return to a stricter interpretation of the Rule
-          of Saint Benedict.
-        </p>
-        <p>
-          In the 13th century, Cistercian monks developed their unique number
-          notation system to maintain records of their inventories, astronomical
-          calculations, and musical notations. The system allowed them to record
-          numbers efficiently in their manuscripts while saving valuable space
-          on expensive parchment.
-        </p>
-      </section>
-
-      <section>
         <h2>The Number System</h2>
         <p>
           The Cistercian numeral system is remarkably efficient: it can
@@ -270,10 +257,14 @@
           <li>Bottom left: thousands (1000-9000)</li>
         </ul>
         <p>
-          By combining these marks, scribes could efficiently represent complex
-          numbers. For example, the number 1,234 would be written as a single
-          symbol combining the marks for 1000, 200, 30, and 4 in their
+          Combining these marks creates a single character representing a number
+          from 0-9999. For example, the number 1,234 would be written as a
+          single symbol combining the marks for 1000, 200, 30, and 4 in their
           respective quadrants.
+        </p>
+        <p>
+          Use the table below to build your own Cistercian numeral. Combine
+          numbers from each column to create a single symbol.
         </p>
       </section>
       <section class="build-a-glyph">
