--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@
         </p>
         <p>
           I thought this would be a great system to experiment with, and I went
-          ahead and registred cistercian.date as my own domain.
+          ahead and registred cistercian.date to host the project.
         </p>
         <p>
           As with many projects, I bought the domain with the intention of
@@ -257,8 +257,7 @@
           <li>Bottom left: thousands (1000-9000)</li>
         </ul>
         <p>
-          Combining these marks creates a single character representing a number
-          from 0-9999. For example, the number 1,234 would be written as a
+          For example, the number 1,234 would be written as a
           single symbol combining the marks for 1000, 200, 30, and 4 in their
           respective quadrants.
         </p>
